# django-routing-api

./: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  route_map.html  test.py  test_map.py
core/: admin.py  constants.py  exceptions.py  logic.py  models.py  selectors.py  services.py  urls.py  views.py
core/management/commands/: import_stations.py
core/migrations/: 0001_initial.py  0002_alter_fuelstation_options_fuelstation_created_at_and_more.py
core/tests/: test_apis.py  test_logic.py  test_selectors.py  test_services.py
src/: settings.py  urls.py
